--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --target=lib src/plugin.js",
-    "build:demo": "vue-cli-service build --dest=demo src/demo/main.js",
+    "build:docs": "vue-cli-service build --dest=docs src/docs/main.js",
     "dev": "vue-cli-service serve",
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
