--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
     "prettier": "^1.18.2",
-    "semantic-release": "^15.13.31",
+    "semantic-release": "^16.0.0-beta.46",
     "vue": "^2.6.10",
     "vue-template-compiler": "^2.6.10"
   },
