--- a/package.json
+++ b/package.json
@@ -2,37 +2,22 @@
   "name": "vue-input-facade",
   "version": "0.0.0-development",
   "description": "A lightweight and dependency free input facade created specific for Vue",
+  "author": "Ronald Jerez <dlanor@gmail.com> (https://github.com/RonaldJerez/)",
+  "scripts": {
+    "build": "npm run build:docs; npm run build:plugin",
+    "lint": "vue-cli-service lint",
+    "build:plugin": "vue-cli-service build --target=lib src/plugin.js",
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
+    "semantic-release": "semantic-release",
+    "dev": "vue-cli-service styleguidist --config styleguide/config.js --mode development",
+    "build:docs": "vue-cli-service styleguidist:build --config styleguide/config.js",
+    "test": "jest --coverage",
+    "test:watch": "jest --coverage --watch"
+  },
   "main": "dist/vue-input-facade.umd.min.js",
   "files": [
     "dist/*.js"
   ],
-  "author": "Ronald Jerez <dlanor@gmail.com> (https://ronaldjerez.github.io/)",
-  "license": "MIT",
-  "keywords": [
-    "vue",
-    "vuejs",
-    "input",
-    "facade",
-    "mask",
-    "masking",
-    "component",
-    "directive",
-    "filter",
-    "front-end",
-    "vue-input-facade",
-    "web"
-  ],
-  "scripts": {
-    "dev": "vue-cli-service serve",
-    "test": "jest --coverage",
-    "test:watch": "jest --coverage --watch",
-    "build": "npm run build:docs; npm run build:plugin",
-    "build:plugin": "vue-cli-service build --target=lib src/plugin.js",
-    "build:docs": "vue-cli-service build --dest=docs src/docs/main.js",
-    "lint": "vue-cli-service lint",
-    "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "semantic-release": "semantic-release"
-  },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
@@ -50,6 +35,7 @@
     "prettier": "^1.18.2",
     "semantic-release": "^16.0.0-beta.46",
     "vue": "^2.6.10",
+    "vue-cli-plugin-styleguidist": "^4.2.2",
     "vue-template-compiler": "^2.6.10"
   },
   "config": {
@@ -57,6 +43,21 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
+  "keywords": [
+    "vue",
+    "vuejs",
+    "input",
+    "facade",
+    "mask",
+    "masking",
+    "component",
+    "directive",
+    "filter",
+    "front-end",
+    "vue-input-facade",
+    "web"
+  ],
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/RonaldJerez/vue-input-facade.git"
