--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,20 @@
 os: linux
 language: node_js
 
-node_js:
-  - node
-  - lts/*
-  - 10
-
 branches:
   only:
     - master
-    # - next
+    - next
 
 install: travis_retry npm install
 
 jobs:
   include:
     - stage: test
-      name: Unit Tests,
+      node_js:
+        - node
+        - lts/*
+        - 10
       script:
         - npm test
         - npm run coveralls
