--- a/package.json
+++ b/package.json
@@ -61,5 +61,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/RonaldJerez/vue-input-facade.git"
-  }
+  },
+  "homepage": "https://ronaldjerez.github.io/vue-input-facade"
 }
