--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.0.0-development",
   "description": "A lightweight and dependency free input masking library created specific for Vue",
   "author": "Ronald Jerez <dlanor@gmail.com> (https://github.com/RonaldJerez/)",
+  "license": "MIT",
+  "homepage": "https://ronaldjerez.github.io/vue-input-facade",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/RonaldJerez/vue-input-facade.git"
+  },
   "scripts": {
     "build": "npm run build:docs; npm run build:plugin",
     "lint": "vue-cli-service lint",
@@ -15,9 +21,7 @@
     "test:watch": "jest --coverage --watchAll"
   },
   "main": "dist/vue-input-facade.umd.min.js",
-  "files": [
-    "dist/*.js"
-  ],
+  "files": [ "dist/*.js" ],
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.1",
     "@vue/cli-plugin-eslint": "^4.3.1",
@@ -32,6 +36,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^5.0.0",
+    "husky": "^4.2.5",
     "prettier": "^1.18.2",
     "semantic-release": "^17.0.7",
     "vue": "^2.6.11",
@@ -41,6 +46,11 @@
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run lint && npm run test"
     }
   },
   "keywords": [
@@ -56,11 +66,5 @@
     "front-end",
     "vue-input-facade",
     "web"
-  ],
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/RonaldJerez/vue-input-facade.git"
-  },
-  "homepage": "https://ronaldjerez.github.io/vue-input-facade"
+  ]
 }
