fix: fix the release script to actually build the package -__-

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,8 @@ jobs:
         run: npm ci
       - name: Test
         run: npm test
+      - name: Build
+        run: npm run build:plugin
       - name: Publish
         run: npx semantic-release 
         env:
