--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vue/cli-plugin-eslint": "^4.5.15",
     "@vue/cli-service": "^4.5.15",
     "@vue/compiler-dom": "^3.2.40",
+    "@vue/compiler-sfc": "^3.2.40",
     "@vue/eslint-config-prettier": "^5.0.0",
     "@vue/test-utils": "^2.1.0",
     "@vue/vue3-jest": "^28.1.0",
@@ -48,7 +49,7 @@
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^29.1.2",
     "prettier": "^1.18.2",
-    "semantic-release": "^17.4.7",
+    "semantic-release": "^19.0.5",
     "vue": "^3.2.40"
   },
   "config": {
