--- a/.github/workflows/gh-pages-latest.yml
+++ b/.github/workflows/gh-pages-latest.yml
@@ -1,8 +1,11 @@
 name: Publish demo page
 
 on:
-  release:
-    types: [ published ] # published, unpublished, created, edited, deleted, or prereleased
+  push:
+    branches:
+      - main
+    tags:
+      - 'v*.*.*'
 
 jobs:
   docs:
@@ -12,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 14
+          node-version: 16
       - name: Install
         run: npm ci
       - name: Build Docs
@@ -21,4 +24,6 @@ jobs:
         uses: peaceiris/actions-github-pages@v3.1.12
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: build
+          publish_dir: ./build
+          destination_dir: latest
+
