chore: minor readme and coverage updates

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,23 +1,26 @@
 name: Coverage
 
 on:
-  - push
-  - pull_request
+  pull_request:
+  push:
+    branches:
+      - master
+      - beta
 
 jobs:
   coverage:
     name: Coverage
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 14
+          node-version: 16
       - name: Install
         run: npm ci
       - name: Test
         run: npm test
       - name: Coveralls
-        uses: coverallsapp/github-action@master
+        uses: coverallsapp/github-action@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
