feat(vue3): various upgrades for vue 3
Upgrades dependencies, migrates to storybook + vite, removes default export.

BREAKING CHANGE: Users will have to use es6-style named imports instead.

closes #44, closes #52

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 .DS_Store
 node_modules
 /dist
-/build
 /coverage
+.yalc
+yalc.lock
+*.timestamp-*
 
 # local env files
 .env.local
@@ -21,3 +23,6 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
+
+# Storybook Build
+storybook-static/
