--- a/package.json
+++ b/package.json
@@ -9,49 +9,88 @@
     "type": "git",
     "url": "https://github.com/RonaldJerez/vue-input-facade.git"
   },
+  "main": "dist/vue-input-facade.umd.js",
+  "module": "dist/vue-input-facade.js",
+  "types": "dist/index.d.ts",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/vue-input-facade.js",
+      "require": "./dist/vue-input-facade.umd.js"
+    }
+  },
   "scripts": {
-    "build": "npm run build:docs; npm run build:plugin",
-    "lint": "vue-cli-service lint",
-    "build:plugin": "vue-cli-service build --target=lib src/plugin.js",
+    "prebuild": "rm -rf ./dist",
+    "build": "run-p type-check build:plugin build:docs",
+    "build:docs": "storybook build",
+    "build:plugin": "vite build",
+    "lint": "eslint . --ext .vue,.js,.cjs,.ts --fix && npm run prettier",
+    "lint:ci": "eslint . --ext .vue,.js,.cjs,.ts && npm run prettier:ci",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "semantic-release": "semantic-release",
-    "serve": "vue-cli-service serve",
-    "dev": "vue-cli-service styleguidist --config styleguide/config.js --mode development",
-    "build:docs": "vue-cli-service styleguidist:build --config styleguide/config.js",
-    "test": "jest --coverage",
-    "test:filter": "func() { yarn test \"$1\" --coverage-reporters=\"lcov\" --coverageThreshold={} ${@:2}; }; func",
-    "test:watch": "jest --coverage --watchAll",
-    "preyalcpublish": "yarn build:plugin"
+    "dev": "npm run storybook",
+    "prepush": "npm run type-check && npm run lint && git diff HEAD --quiet && npm run test",
+    "prettier": "prettier --config .prettierrc.json --log-level warn --write .",
+    "prettier:ci": "prettier --config .prettierrc.json --log-level warn --check .",
+    "preyalcpublish": "npm run build:plugin",
+    "storybook": "storybook dev -p 6060 --no-open",
+    "test": "vitest run --coverage",
+    "test:filter": "func() { npm run test \"$1\"; }; func",
+    "test:watch": "vitest --coverage",
+    "type-check": "vue-tsc --noEmit -p tsconfig.build.json && vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
-  "main": "dist/vue-input-facade.umd.min.js",
-  "files": [
-    "dist/*.js"
-  ],
   "devDependencies": {
-    "@babel/core": "^7.14.5",
-    "@babel/preset-env": "^7.14.7",
-    "@vue/cli-plugin-babel": "^4.5.15",
-    "@vue/cli-plugin-eslint": "^4.5.15",
-    "@vue/cli-service": "^4.5.15",
-    "@vue/compiler-dom": "^3.2.40",
-    "@vue/compiler-sfc": "^3.2.40",
-    "@vue/eslint-config-prettier": "^5.0.0",
-    "@vue/test-utils": "^2.1.0",
-    "@vue/vue3-jest": "^28.1.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^28.1.3",
-    "core-js": "^3.19.3",
+    "@storybook/addon-essentials": "^7.6.3",
+    "@storybook/addon-links": "^7.6.3",
+    "@storybook/blocks": "^7.6.3",
+    "@storybook/builder-vite": "^7.6.3",
+    "@storybook/vue3": "^7.6.3",
+    "@storybook/vue3-vite": "^7.6.3",
+    "@tsconfig/node16": "^16.1.1",
+    "@types/jsdom": "^21.1.6",
+    "@types/node": "^20.10.3",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vitest/coverage-istanbul": "^0.34.3",
+    "@vue/compiler-core": "3.3.4",
+    "@vue/test-utils": "^2.0.0-0",
+    "@vue/tsconfig": "^0.4.0",
+    "babel-jest": "^27.0.6",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-storybook": "^0.6.15",
+    "eslint-plugin-vitest": "^0.3.20",
+    "eslint-plugin-vue": "^9.19.2",
     "husky": "^4.3.8",
-    "jest": "^28.1.3",
-    "jest-environment-jsdom": "^29.1.2",
-    "prettier": "^1.18.2",
-    "semantic-release": "^19.0.5",
-    "vue": "^3.2.40"
+    "jest-serializer-vue": "^3.1.0",
+    "jsdom": "^22.1.0",
+    "npm-run-all2": "^6.1.1",
+    "prettier": "^3.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "sass": "^1.69.5",
+    "semantic-release": "^22.0.12",
+    "storybook": "^7.6.4",
+    "typescript": "^5.3.3",
+    "vite": "^4.5.1",
+    "vite-plugin-dts": "^3.7.0",
+    "vitest": "0.34.3",
+    "vue": "^3.3.10",
+    "vue-tsc": "^1.8.25"
+  },
+  "peerDependencies": {
+    "@vue/compiler-core": ">= 3.x",
+    "vue": ">= 3.x"
+  },
+  "engines": {
+    "node": ">= 16.x"
   },
   "config": {
     "commitizen": {
@@ -60,7 +99,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run lint && git diff HEAD --quiet && npm run test"
+      "pre-push": "npm run prepush"
     }
   },
   "keywords": [
