--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -6,6 +6,8 @@ on:
     branches:
       - master
       - beta
+      - next
+      - v[0-9]+.**
 
 jobs:
   coverage:
@@ -15,7 +17,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version: 18
       - name: Install
         run: npm ci
       - name: Test
