--- a/.github/workflows/gh-pages-latest.yml
+++ b/.github/workflows/gh-pages-latest.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version: 18
       - name: Install
         run: npm ci
       - name: Build Docs
@@ -22,6 +22,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
+          publish_dir: ./storybook-static
           destination_dir: latest
 
